--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
 
@@ -170,7 +170,7 @@
 
         </div>
         <div class="first__block-img">
-            <img src="/image/Frame.png" alt="">
+            <img src="image/Frame.png" alt="">
         </div>
     </section>
 
@@ -261,7 +261,7 @@
                             оказывающих услуги по обучению
                             работодателей и работников в области охраны труда.</p>
                     </div>
-                    <img src="/image/Frame%201427.png" alt="">
+                    <img src="image/Frame%201427.png" alt="">
                 </div>
                 <div class="div4">
                     <div>
